--- a/Day12Lab_TH1/Views/Student/Create.cshtml
+++ b/Day12Lab_TH1/Views/Student/Create.cshtml
@@ -1,12 +1,15 @@
 ﻿@model Student
 
 <div>
+    <div asp-validation-summary="All" class="text-danger"></div>
     <form asp-controller="Student" asp-action="Create" method="post" asp-route-area="Admin" enctype="multipart/form-data" class="mt-3">
         <div style="margin-top:7px" class="form-group row">
             <label asp-for="Name" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <input asp-for="Name" class="form-control" placeholder="Họ tên" />
+                <span asp-validation-for="Name" class="text-danger"></span> 
             </div>
+
         </div>
 
         <div class="form-group row">
@@ -20,6 +23,7 @@
             <label asp-for="Email" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <input asp-for="Email" class="form-control" placeholder="Email" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
         </div>
 
@@ -27,6 +31,7 @@
             <label asp-for="Password" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <input asp-for="Password" class="form-control" placeholder="Password" />
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
         </div>
 
@@ -42,6 +47,7 @@
             <label asp-for="IsRegular" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <input asp-for="IsRegular" class="form-control-input" />
+                <span asp-validation-for="IsRegular" class="text-danger"></span>
             </div>
         </div>
 
@@ -49,6 +55,7 @@
             <label asp-for="DateofBirth" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <input asp-for="DateofBirth" class="form-control" />
+                <span asp-validation-for="DateofBirth" class="text-danger"></span>
             </div>
         </div>
 
@@ -62,6 +69,14 @@
                                id="Gender_@(gender)" />@gender
                     </label>
                 }
+                <span asp-validation-for="Gender" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label asp-for="Score" class="col-sm-2 col-form-label">Điểm</label>
+            <div class="col-sm-10">
+                <input asp-for="Score" class="form-control" placeholder="Nhập điểm (0.0 - 10.0)" />
+                <span asp-validation-for="Score" class="text-danger"></span>
             </div>
         </div>
 
@@ -72,6 +87,7 @@
             </div>
         </div>
 
+
         <div style="margin-top:7px" class="form-group row">
             <div class="col-sm-10 offset-sm-2">
                 <button type="submit" class="btn btn-primary">Create</button>
@@ -79,3 +95,9 @@
         </div>
     </form>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
