--- a/Day13Lab_bt2/Views/Learner/Index.cshtml
+++ b/Day13Lab_bt2/Views/Learner/Index.cshtml
@@ -8,6 +8,8 @@
 <div class="ms-2 mx-2">
     <h1>Learner List</h1>
 
+    @await Component.InvokeAsync("Major")
+    <div id="content">
     <table class="table table-striped">
         <thead>
             <tr>
@@ -29,6 +31,7 @@
                     <td>@s.LastName</td>
                     <td>@s.Major.MajorName</td>
                     <td>@s.EnrollmentDate</td>
+
                     <td>
                         <a asp-action="Edit" asp-route-id="@s.LearnerID">Edit</a> |
                         <a asp-action="Delete" asp-route-id="@s.LearnerID">Delete</a>
@@ -37,6 +40,23 @@
             }
         </tbody>
     </table>
-
+    </div>
     <a asp-action="Create" class="btn btn-primary">Create New Student</a>
 </div>
+
+@section Scripts {
+    <script>
+        $("li").click(function (e) {
+            var id = $(this).attr("id");
+            //alert(id);
+            $.ajax({
+                url: "LearnerByMajorID",
+                data: { mid: id },
+                success: function (response) {
+                    $("div#content").html(response);
+                }
+            });
+        });
+    </script>
+}
+
