--- a/Day13Lab_bt2/Views/Learner/Index.cshtml
+++ b/Day13Lab_bt2/Views/Learner/Index.cshtml
@@ -9,8 +9,18 @@
     <h1>Learner List</h1>
 
     @await Component.InvokeAsync("Major")
+    <!--Thêm form tìm kiếm-->
+    <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+        <div class="input-group">
+            <input id="keyword" class="form-control" name="keyword"
+                   type="text" placeholder="Search Learner" />
+            <button id="btnSearch" class="btn btn-primary" type="button">
+                <i class="fas fa-search"></i>
+            </button>
+        </div>
+    </form>
     <div id="content">
-    <table class="table table-striped">
+        <table class="table table-striped">
         <thead>
             <tr>
                 <th>Mã</th>
@@ -40,23 +50,62 @@
             }
         </tbody>
     </table>
+        <!--In thanh nav–phân trang-->
+        <ul class="pagination">
+            @for (int i = 1; i <= ViewBag.pageNum; i++)
+            {
+                <li class="page-item" page="@i"
+                    @(ViewBag.mid != null ? " mid=" + ViewBag.mid : "")
+                    @(ViewBag.keyword != null ? " keyword=" + ViewBag.keyword : "")>
+                    <a class="page-link">@i</a>
+                </li>
+            }
+        </ul>
     </div>
     <a asp-action="Create" class="btn btn-primary">Create New Student</a>
 </div>
 
 @section Scripts {
     <script>
-        $("li").click(function (e) {
-            var id = $(this).attr("id");
-            //alert(id);
+        //thêm script ajax cho click vào page–item, nút search
+        $('body').on('click', '.li.page-item', function (e) {
+            var page = $(this).attr("page");
+            var mid = $(this).attr("mid");
+            var keyword = $(this).attr("keyword");
+            var data = { mid: mid, keyword: keyword, pageIndex: page };
             $.ajax({
-                url: "LearnerByMajorID",
-                data: { mid: id },
+                url: "LernerFilter",
+                data: data,
                 success: function (response) {
-                    $("div#content").html(response);
+                    $("#div#content").html(response);
+                }
+            });
+        });
+
+        $(".nav li").click(function (e) {
+            var id = $(this).attr("id");
+            var data = { mid: id };
+            $.ajax({
+                url: "LernerFilter",
+                data: data,
+                success: function (response) {
+                    $("#div#content").html(response);
+                }
+            });
+        });
+
+        $("#button#btnSearch").click(function (e) {
+            var keyword = $("#keyword").val();
+            var data = { keyword: keyword };
+            $.ajax({
+                url: "LernerFilter",
+                data: data,
+                success: function (response) {
+                    $("#div#content").html(response);
                 }
             });
         });
     </script>
 }
+
 
